# dissertation-emerald-ai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  HOWTORUN.md  LICENSE  Makefile  QUICKSTART.md  README.md  emerald.py  pyproject.toml  research_automation.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  research-question.md
.github/workflows/: ci.yml
api/: main.py
apps/api/: README.md  main.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css
data/: README.md
data/governance/: datasheet.md  eda_report.md  explain_report.md  fairness_report.md  feature_audit_summary.md  feature_catalogue.yaml  imbalance_report.md  preprocess_report.md  selection_report.md  training_report.md
docs/: README.md  USAGE.md
docs/proposal/: README.md  build_proposal.py  build_proposal_condensed.py  proposal_fifth_version.docx  proposal_first_draft.docx  proposal_fourth_draft.docx  proposal_fourth_draft_3k.docx  proposal_fourth_draft_condensed.docx  proposal_prompt.txt  proposal_second_draft.docx  proposal_third_draft.docx
literature/: BRAIN.md  build_papers.py  gaps.md  index.yaml
literature/papers/: aas2021explaining.md  akiba2019optuna.json  altman1968.json  altman1968.md  angelopoulos2023conformal.json  angelopoulos2023conformal.md  arik2021tabnet.json  arik2021tabnet.md  baesens2003benchmark.md  bellamy2018aif360.md  berg2022esg.json  berg2022esg.md  borisov2022dnntabular.json  breiman2001randomforest.json  chawla2002smote.json  chawla2002smote.md  chen2016xgboost.md  chouldechova2017fair.json  chouldechova2017fair.md  delong1988roc.json  dumitrescu2022ml.md  ehlers2017greenbond.json  ehlers2017greenbond.md  euAiAct2021.json  euAiAct2021.md  euTaxonomy2020.json  fcaConsumerDuty2022.md  flammer2021corporate.json  flammer2021corporate.md  gebru2021datasheets.json  gorishniy2021revisiting.md  grinsztajn2022trees.md  hand1997statistical.md  hardt2016eqodds.md  hedstrom2023quantus.md  ke2017lightgbm.md  kursa2010boruta.json  lessmann2015benchmark.md  lin2017focal.md  lma2023glp.md  (+18 more)
literature/state/: README.md  authors.json  datasets.json  keywords.json  manifest.json  methods.json  questions.json
literature/themes/: 4.3-tabular-deep-learning.md  4.4-imbalance-calibration.md  4.6-xai-finance.md  4.7-fairness-compliance.md
notebooks/: README.md
research/literature/: BRAIN.md  REVIEW_QUEUE.md  auto_index.yaml  build_papers.py  gaps.md  glossary.md  index.yaml
research/literature/papers/: aas2021explaining.json  aas2021explaining.md  alejandrobarredoarrieta2019explainable.json  alejandrobarredoarrieta2019explainable.md  alejandrodrexler2014keeping.json  alejandrodrexler2014keeping.md  alexandergordon1984classification.json  alexandergordon1984classification.md  alexgammerman1990bayesian.json  alexgammerman1990bayesian.md  alexgoldstein2014peeking.json  alexgoldstein2014peeking.md  altman1968.md  aminaadadi2018peeking.json  aminaadadi2018peeking.md  amirfatiya2001bankruptcy.json  amirfatiya2001bankruptcy.md  amirhosseinkarimi2022towards.json  amirhosseinkarimi2022towards.md  amitdatta2015automated.json  amitdatta2015automated.md  andreipaleyes2022challenges.json  andreipaleyes2022challenges.md  andrewdselbst2019fairness.json  andrewdselbst2019fairness.md  angusdeaton2017understanding.json  angusdeaton2017understanding.md  annaveronikadorogush2018catboost.json  annaveronikadorogush2018catboost.md  anon2009the.json  anon2009the.md  anon2011guaranteed.json  anon2011guaranteed.md  anthonybellotti2017reliable.json  anthonybellotti2017reliable.md  antoinebordes2014question.json  antoinebordes2014question.md  arik2021tabnet.md  arthurmaillart2024distill.json  arthurmaillart2024distill.md  (+380 more)
research/literature/state/: README.md  authors.json  citations.dot  citations.json  datasets.json  discovery_seen.json  keywords.json  manifest.json  methods.json  processed.json
research/literature/themes/: 4.1-evolution-credit-scoring.md  4.2-gbdt-tabular-sota.md  4.5-green-finance.md  4.6-xai-finance.md  4.7-fairness-compliance.md  4.8-gap-positioning.md
research/notebooks/: README.md
research/scripts/: reproduce.sh
scripts/: reproduce.sh
src/emerald_ai/: __init__.py  __main__.py  cli.py  config.py
src/emerald_ai/calibration/: __init__.py  calibrators.py  conformal.py
src/emerald_ai/data/: __init__.py  eda.py  leakage_audit.py  load.py
src/emerald_ai/eval/: __init__.py  metrics.py  risk_bands.py
src/emerald_ai/explain/: __init__.py  counterfactual.py  fidelity.py  shap_engine.py
src/emerald_ai/fairness/: __init__.py  audit.py
src/emerald_ai/features/: __init__.py  pipeline.py  selection.py
src/emerald_ai/models/: __init__.py  deep.py  linear.py  trees.py  xgboost_model.py
tests/: test_data_load.py  test_deep.py  test_eda.py  test_explain.py  test_features_pipeline.py  test_features_selection.py  test_imbalance.py  test_leakage_audit.py  test_literature_brain.py  test_models_calibration_eval.py  test_research_discovery.py  test_risk_bands.py  test_smoke.py  test_tune.py
web/: README.md
(+21 files in other folders)
